--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,55 @@ body{
 h1 > span{
     color: Tomato;
 }
+
+.shoe-style{
+    padding: 20px;
+}
+
+.shoe-style img{
+    box-shadow: 2px 2px 5px lightgray;
+    border: 1px solid transparent;
+    max-height: 300px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.price-tag {
+    margin: 5px;
+    border: 1px solid transparent;
+    background-color: rgb(184, 195, 197);
+    padding: 5px 5px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.custom-btn {
+    font-size: 18px;
+    border: 1px solid transparent;
+    background-color: rgb(255, 192, 44);
+    padding: 6px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.card-bott{
+    background-color: #fff;
+    border-top: 0
+}
+
+.card-style{
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
