--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ h1 > span{
 }
 
 .price-tag {
+    box-shadow: 2px 2px 5px gray;
     margin: 5px;
     border: 1px solid transparent;
     background-color: rgb(184, 195, 197);
@@ -53,9 +54,10 @@ h1 > span{
 }
 
 .custom-btn {
+    box-shadow: 2px 2px 5px gray;
     font-size: 18px;
     border: 1px solid transparent;
-    background-color: rgb(255, 192, 44);
+    background-color: #ffc02c;
     padding: 6px;
     border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -75,4 +77,25 @@ h1 > span{
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
+}
+
+
+/** offer */
+
+.offer {
+    margin-top: 100px;
+    background-image: url('../photos/offer-bg.png');
+    width: 100%;
+    height: 250px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+}
+
+.star-icon i{
+    color: #ffc02c;
 }
