--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,13 @@ body{
     font-size: 60px;
 }
 
+.header-title h2{
+    margin-bottom: 10px;
+    font-weight: 700;
+    color: #222;
+    text-shadow: 2px 2px #f1b329;
+}
+
 h1 > span{
     color: Tomato;
 }
@@ -98,4 +105,119 @@ h1 > span{
 
 .star-icon i{
     color: #ffc02c;
+}
+
+
+/** Testimonial part **/
+.testimonial-area{
+      position: relative;
+      padding: 30px 0;
+}
+
+.single-testimonial{
+    color: #fff;
+    padding-left: 75px;
+    position: relative;
+    margin: 0 15px 15px;
+}
+
+.img-area{
+    border-bottom: 50%;
+    height: 150px;
+    width: 150px;
+    left: 0;
+    margin-top: -75px;
+    top: 50%;
+    position: absolute;
+}
+
+.fa-quote-left, .fa-quote-right{
+    font-size: 24px;
+}
+
+.img-area > img{
+    background: linear-gradient(to bottom, rgb(250, 234, 16), rgb(245, 79, 14));
+    padding: 5px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.testi-text{
+    box-shadow: 2px 2px 5px gray;
+    border: 1px solid transparent;
+    padding: 40px 20px 40px 100px;
+    color: #000000;
+    border-radius: 10px 90px 5px 50px;
+    -webkit-border-radius: 2px 2px 5px gray;
+    -moz-border-radius: 2px 2px 5px gray;
+    -ms-border-radius: 2px 2px 5px gray;
+    -o-border-radius: 2px 2px 5px gray;
+}
+.testi-text h4{
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.testi-text h4 span{
+    font-size: 15px;
+    display: block;
+}
+
+.testi-text p{
+    font-size: 1.15rem;
+    font-weight: 300;
+    text-transform: capitalize;
+    line-height: 1.5;
+}
+.custom-footer{
+    padding: 50px 0px;
+}
+
+.custom-footer ul {
+    list-style-type: none;
+}
+
+.custom-footer ul li{
+    padding: 5px 0px;
+    text-align: justify;
+}
+
+.custom-footer ul li a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.money-card li{
+    display: inline-block;
+
+}
+
+
+/* responsive part */
+@media only screen and (max-width: 676px){
+    .testimonial-area{
+      padding: 15px 0;
+    }
+    .single-testimonial{
+        padding-left: 0px;
+        padding-top: 75px;
+    }
+    .img-area{
+        left: 50%;
+        margin-left: -75px;
+        top: 75px;
+    }
+    .testi-text{
+        padding: 80px 25px 45px; 
+    }
+    .testi-text h4{
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+    .testi-text p{
+        font-size: 16px;
+    }
 }
