--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ h1 > span{
     -o-border-radius: 20px;
 }
 
+.side-card-content{
+    padding-top: 50px;
+}
+
 
 /** offer */
 
@@ -93,7 +97,7 @@ h1 > span{
     margin-top: 100px;
     background-image: url('../photos/offer-bg.png');
     width: 100%;
-    height: 250px;
+    min-height: 250px;
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 30px;
@@ -107,6 +111,9 @@ h1 > span{
     color: #ffc02c;
 }
 
+.content-offer {
+    padding-top: 30px;
+}
 
 /** Testimonial part **/
 .testimonial-area{
@@ -193,31 +200,4 @@ h1 > span{
 .money-card li{
     display: inline-block;
 
-}
-
-
-/* responsive part */
-@media only screen and (max-width: 676px){
-    .testimonial-area{
-      padding: 15px 0;
-    }
-    .single-testimonial{
-        padding-left: 0px;
-        padding-top: 75px;
-    }
-    .img-area{
-        left: 50%;
-        margin-left: -75px;
-        top: 75px;
-    }
-    .testi-text{
-        padding: 80px 25px 45px; 
-    }
-    .testi-text h4{
-        font-size: 20px;
-        margin-bottom: 20px;
-    }
-    .testi-text p{
-        font-size: 16px;
-    }
 }
